# imas_cg_image

./: README.md  docker-compose.yml  manage.py  pyproject.toml
docker/app/: Dockerfile  requirements.txt
idol/: models.py  urls.py  views.py
image/: urls.py  wsgi.py
image/settings/: __init__.py  base.py  default.py  docker.py
