[tool.poetry]
name = "imas_cg_image"
version = "0.1.0"
description = ""
authors = ["Mutsuki Kimuraya <sondessein@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0.2"
django-cors-headers = "^3.2.1"
django-redis = "^4.11.0"
Pillow = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
