[tool.poetry]
name = "imas_cg_image"
version = "0.1.0"
description = ""
authors = ["Mutsuki Kimuraya <sondessein@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "~3.0"
django-cors-headers = "~3.2"
django-redis = "~4"
Pillow = "~7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
