[tool.poetry]
name = "imas_cg_image"
version = "0.1.0"
description = ""
authors = ["Mutsuki Kimuraya <sondessein@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"
django-cors-headers = "^3.10"
django-redis = "^5.2"
Pillow = "^9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
